--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -167,7 +167,7 @@
         <a class="btn btn-outline-primary" href="five_safes.html">Learn More</a>
       </div>
       <div class="col-md-5">
-        <img src="assets/img/five_safes.jpg" alt="Five Safes Framework" class="img-fluid rounded">
+        <img src="assets/img/5-safes.jpg" alt="Five Safes Framework" class="img-fluid rounded">
       </div>
     </div>
 
